# Real-Time-Website-Analytics

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.yaml  docker-compose.airflow-spark.yml  docker-compose.kafka.yml  package-lock.json  package.json  pyproject.toml
airflow/dags/: kafka_stream_snowflake_catchup.py  poker_batch_pipeline.py  poker_modeling_pipeline.py  poker_pipeline_bootstrap.py  simulation_batch_pipeline.py
airflow/plugins/: poker_pipeline_common.py  snowflake_sql_operator.py
dashboard/: README.md  __init__.py  analytics.py  api_bridge.py  app.py  config.py  data_access.py
docker/airflow/: Dockerfile
docker/app/: Dockerfile
docs/: ARCHITECTURE.md  CODEBASE_GUIDE.md  DATASETS.md  DATA_MODEL.md
historical/historical_ingest/: __init__.py  fetch_phh.py  handhq_backfill.py  normalize.py
jobs/: __init__.py  kafka_to_raw.py  stream_kafka.py
ml_model/profiles/: labels.py  (+12 more)
poker_platform/: __init__.py  config.py  env.py  event_contracts.py  kafka_utils.py  redis_live.py  schemas.py  storage.py
scripts/: consume.js  simulate.js
src/: app.js  server.js
tests/: test_config_env.py  test_dashboard_api_bridge.py  test_dashboard_app.py  test_dashboard_data.py  test_dashboard_data_access.py  test_event_contracts.py  test_handhq_backfill.py  test_live_dashboard_redis.py  test_llm_gating.py  test_personas.py  test_profiles.py  test_run_simulation.py  test_simulation_registry.py  test_simulation_summaries.py  test_simulation_worker.py  test_simulator_agents.py  test_simulator_engine.py  test_storage.py  test_streaming_metrics.py
(+42 files in other folders)
