[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-action-platform"
version = "0.1.0"
description = "Action-level poker analytics platform with historical ingest, simulation, streaming, and profiling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.0",
  "redis>=5.2.0",
  "requests>=2.32.0",
  "scikit-learn>=1.5.0",
  "streamlit>=1.41.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
snowflake = [
  "snowflake-connector-python[pandas]>=3.12.0",
]
kafka = [
  "kafka-python>=2.1.0",
]
openai = [
  "openai>=1.76.0",
]

[tool.setuptools.packages.find]
where = [
  ".",
  "historical",
  "ml_model",
  "simulation",
]
include = [
  "dashboard*",
  "historical_ingest*",
  "jobs*",
  "profiles*",
  "poker_platform*",
  "simulator*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "historical", "ml_model", "simulation"]
addopts = "-ra"
